--- a/Login.html
+++ b/Login.html
@@ -22,7 +22,7 @@ class="close" title="Close Modal">&times;</span>
 
       <button type="submit">Login</button>
       <label>
-        <input type="checkbox" checked="checked" name="remember"> Remember me
+        <input type="checkbox" checked="checked" name="remember"> Remember mee
       </label>
     </div>
 
